--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         ]
     },
     "require": {
-        "illuminate/support": "^7.0|^8.0|^9.0",
-        "illuminate/notifications": "^7.0|^8.0|^9.0"
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/notifications": "^7.0|^8.0|^9.0|^10.0"
     },
     "config": {
         "sort-packages": true
